<resources>
    <string name="app_name">BusyLight</string>
    <string name="off">Off</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="header">Select a button to change your light\'s color.</string>
    <string name="settings">Settings</string>
    <string name="custom">Custom…</string>
    <string name="redLabel">Red:</string>
    <string name="greenLabel">Green:</string>
    <string name="blueLabel">Blue:</string>
    <string name="tint">Tint:</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="text">Text</string>
    <string name="connectionError">Connection Error</string>
    <string name="connectionErrorMessage">Could not connect to BusyLight. Please make sure your BusyLight is powered on and paired with your device and try again.</string>
    <string name="dismiss">Dismiss</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
</resources>