<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/redLabel"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <com.google.android.material.slider.Slider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red"
            android:tickMark="@null"
            android:valueFrom="0"
            android:valueTo="255"
            android:stepSize="1"
            android:foregroundTint="@color/red"
            android:layout_margin="10dp"
            app:tickVisible="false"
            app:thumbColor="@color/red"
            app:trackColorActive="@color/red"
            app:labelBehavior="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/greenLabel"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <com.google.android.material.slider.Slider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green"
            android:valueFrom="0"
            android:valueTo="255"
            android:stepSize="1"
            android:foregroundTint="@color/green"
            android:layout_margin="10dp"
            app:tickVisible="false"
            app:thumbColor="@color/green"
            app:trackColorActive="@color/green"
            app:labelBehavior="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/blueLabel"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <com.google.android.material.slider.Slider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blue"
            android:valueFrom="0"
            android:valueTo="255"
            android:stepSize="1"
            android:foregroundTint="@color/blue"
            android:layout_margin="10dp"
            app:tickVisible="false"
            app:thumbColor="@color/blue"
            app:trackColorActive="@color/blue"
            app:labelBehavior="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/tint"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbWhite"
                android:text="@string/white"
                android:checked="true"
                android:layout_margin="10dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbBlack"
                android:text="@string/black"
                android:layout_margin="10dp"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/colour"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/text"
        android:textSize="20sp"
        android:textColor="@color/white" />

</LinearLayout>